# rusty-soundbird

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yaml
src/: main.rs
src/commands/: fruit.rs  help.rs  mod.rs  ping.rs  player.rs
src/commands/player/: join.rs  mod.rs  play.rs  query.rs  queue.rs  search_all.rs  skip.rs  spotify.rs  stop.rs  yt.rs
src/configs/: env.rs
src/input/: mod.rs  spotdl.rs
src/input/metadata/: spotdl.rs
src/input/sources/: mod.rs  spotdl.rs
src/models/: events.rs
src/models/metadata/: spotdl.rs
