[package]
name = "rusty-music-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
poise = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
# serenity = { version = "0.12.2",  default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
# rand = "0.8.5"
songbird = {version = "0.4.1", features = ["builtin-queue"]}
reqwest = { version = "0.11.5" }
symphonia = {version = "0.5.4", features = ["aac","mp3","alac"]}
serde_json = "1.0.118"
symphonia-core = "0.5.4"
